Fix Java 17 compatibility: replace List.getLast() with get(size-1)