@@ -46,7 +46,7 @@ public class ChatService {
         String model = providerResolver.getModel();
 
         if (request.messages() != null && !request.messages().isEmpty()) {
-            var lastUser = request.messages().getLast();
+            var lastUser = request.messages().get(request.messages().size() - 1);
             if ("user".equalsIgnoreCase(lastUser.role())) {
                 String metadata = chatHistoryRepository.buildMetadata("server", model, "ok");
                 chatHistoryRepository.insert(deviceId, conversationId, "user", lastUser.content(), metadata);
